Name:           PoiHash
Version:        0.0
Description:    Geohashing system based on a list of POIs with more information used where the density of POIs is bigger.
License:        Copyright
Author:         Rafael Calsaverini @ Apontador.com
Maintainer:     rafael.calsaverin@2gmail.com
Build-Type:     Simple
Cabal-Version:  >=1.2

Executable poihash
Main-is:        poihash.hs
Build-Depends:  base>=3
